--- a/scss/theme/vartheme-claro.theme.style-rtl.scss
+++ b/scss/theme/vartheme-claro.theme.style-rtl.scss
@@ -23,12 +23,3 @@ body {
 #yoast-wrapper {
   direction: ltr;
 }
-
-.views-exposed-form__item {
-
-  .ui-autocomplete-input {
-    padding-right: calc(1rem - 1px);
-    padding-left: calc(32px);
-  }
-
-}
