--- a/scss/theme/vartheme-claro.theme.style.scss
+++ b/scss/theme/vartheme-claro.theme.style.scss
@@ -44,13 +44,12 @@ input[type="text"] {
 
 body.path-admin .panel.dashboard-block {
   display: block;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  color: #222330;
+  margin-top: var(--gin-spacing-m);
+  margin-bottom: var(--gin-spacing-m);
   border: 1px solid rgba(216, 217, 224, 0.8);
-  border-radius: 2px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: var(--gin-border-xxs);
+  background-color: var(--gin-bg-layer3);
+  box-shadow: var(--gin-shadow-l1);
 }
 
 .block-views-blockvarbase-google-analytics-summary-sessions-and-pageviews {
@@ -80,45 +79,6 @@ body.path-admin .panel.dashboard-block {
     }
   }
 
-  .claro-autocomplete {
-    width: 65%;
-
-    .claro-autocomplete__message {
-      display: none;
-    }
-
-    input {
-      width: 100%;
-      padding-right: 1.875rem;
-    }
-
-    @media screen and (max-width: 81.25rem){
-      width: 100%;
-    }
-  }
-
-  .accordion {
-    .claro-autocomplete {
-      width: 100%;
-    }
-  }
-
-  .js {
-    input.form-autocomplete {
-      background: url('../images/search-autocomplete.svg') no-repeat 100% 50%;
-
-      &.ui-autocomplete-loading {
-        background: url('../images/search-autocompleting.svg') no-repeat 100% 50%;
-      }
-    }
-
-    .is-autocompleting {
-      + .claro-autocomplete__message {
-        display: none;
-      }
-    }
-  }
-
   .field--type-yoast-seo {
     input {
       width: 66%;
@@ -130,90 +90,8 @@ body.path-admin .panel.dashboard-block {
   }
 }
 
-.media-library-item {
-  .media-library-edit__link {
-    right: 40px;
-  }
-
-  .media-library-edit__link,
-  .media-library-item__remove.button:first-child {
-    width: 25px;
-    height: 25px;
-    top: 10px;
-    background-size: 13px;
-    border: 2px solid #ccc !important;
-    font-size: 0;
-
-    &:not(:focus) {
-      box-shadow: none;
-    }
-
-    &:hover, &:focus {
-      border-color: #40b6ff !important;
-      color: transparent;
-    }
-
-    &:active {
-      outline: 2px dotted transparent;
-      box-shadow: 0 0 0 2px #fff, 0 0 0 5px #26a769;
-    }
-  }
-}
-
 // Style Focal point of Focal point "Preview" link cover image for a Video.
 .focal-point-preview-link {
-  padding: 1.2rem;
+  padding: var(--gin-spacing-l);
   text-decoration: none;
-}
-
-// Style media library grid item in the node secondary region layout.
-.layout-region-node-secondary {
-  .media-library-item {
-    &.media-library-item--grid {
-      width: 200px;
-      max-width: 200px;
-    }
-  }
-}
-
-fieldset {
-  &.fieldset {
-    border-color: rgb(216, 217, 224);
-  }
-}
-
-@media screen and (min-width: 61rem) {
-  .layout-region--node-main {
-    width: 65%;
-
-    .layout-region__content {
-      max-width: 100%;
-    }
-  } 
-
-  .layout-region--node-footer {
-    .layout-region__content {
-      max-width: 100%;
-    }
-  }
-
-  .layout-region--node-secondary {
-    width: 35%;
-  }
-}
-
-// Fix styling of form elements in tables on mobile.
-td > .form-item > .form-element,
-td > .ajax-new-content > .form-item > .form-element {
-  @media screen and (max-width: 37.5rem) {
-    width: inherit;
-  }
-}
-
-@media screen and (min-width: 48em) {
-  .is-horizontal {
-    .tabs--secondary {
-      flex-wrap: wrap;
-    }
-  }
 }
